Preventive bug fixing